[package]
name = "pd-quick-override"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to quickly create pagerduty overrides"
repository = "github.com/leeavital/pd-quick-override"
readme = "README.md"
keywords = ["cli", "pagerduty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.93"}
serde = { version = "1.0.93", features=["derive"]}
keyring = { version = "1.2.1" }
chrono = { version = "0.4.23", features = ["std"]}
chrono-tz = { version = "0.8.1"}
regex = "1.0.0"
dirs = "4.0.0"
iana-time-zone = "0.1.53"
thiserror = "1.0.0"
indicatif = "0.17.0"
